tests/baselines/reference/genericCallWithObjectLiteralArguments1.errors.txt
tests/cases/compiler/genericCallWithObjectLiteralArguments1.ts(3,13): error TS2345: Argument of type '{ x: 数字; y: 文字; }' is not assignable to parameter of type '{ x: 数字; y: 数字; }'.
  Types of property 'y' are incompatible.
    Type '文字' is not assignable to type '数字'.
tests/cases/compiler/genericCallWithObjectLiteralArguments1.ts(4,22): error TS2345: Argument of type '{ x: 数字; y: 文字; }' is not assignable to parameter of type '{ x: 数字; y: 数字; }'.
  Types of property 'y' are incompatible.
    Type '文字' is not assignable to type '数字'.
tests/cases/compiler/genericCallWithObjectLiteralArguments1.ts(5,22): error TS2345: Argument of type '{ x: 数字; y: 文字; }' is not assignable to parameter of type '{ x: 文字; y: 文字; }'.
  Types of property 'x' are incompatible.
    Type '数字' is not assignable to type '文字'.
tests/cases/compiler/genericCallWithObjectLiteralArguments1.ts(6,22): error TS2345: Argument of type '{ x: 文字; y: 数字; }' is not assignable to parameter of type '{ x: 数字; y: 数字; }'.
  Types of property 'x' are incompatible.
    Type '文字' is not assignable to type '数字'.
tests/cases/compiler/genericCallWithObjectLiteralArguments1.ts(7,22): error TS2345: Argument of type '{ x: 文字; y: 数字; }' is not assignable to parameter of type '{ x: 文字; y: 文字; }'.
  Types of property 'y' are incompatible.
    Type '数字' is not assignable to type '文字'.


==== tests/cases/compiler/genericCallWithObjectLiteralArguments1.ts (5 errors) ====
    function foo<T>(n: { x: T; y: T }, m: T) { return m; }
    // these are all errors
    var x = foo({ x: 3, y: "" }, 4);
                ~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ x: 数字; y: 文字; }' is not assignable to parameter of type '{ x: 数字; y: 数字; }'.
!!! error TS2345:   Types of property 'y' are incompatible.
!!! error TS2345:     Type '文字' is not assignable to type '数字'.
    var x2 = foo<number>({ x: 3, y: "" }, 4); 
                         ~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ x: 数字; y: 文字; }' is not assignable to parameter of type '{ x: 数字; y: 数字; }'.
!!! error TS2345:   Types of property 'y' are incompatible.
!!! error TS2345:     Type '文字' is not assignable to type '数字'.
    var x3 = foo<string>({ x: 3, y: "" }, 4); 
                         ~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ x: 数字; y: 文字; }' is not assignable to parameter of type '{ x: 文字; y: 文字; }'.
!!! error TS2345:   Types of property 'x' are incompatible.
!!! error TS2345:     Type '数字' is not assignable to type '文字'.
    var x4 = foo<number>({ x: "", y: 4 }, "");
                         ~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ x: 文字; y: 数字; }' is not assignable to parameter of type '{ x: 数字; y: 数字; }'.
!!! error TS2345:   Types of property 'x' are incompatible.
!!! error TS2345:     Type '文字' is not assignable to type '数字'.
    var x5 = foo<string>({ x: "", y: 4 }, "");
                         ~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ x: 文字; y: 数字; }' is not assignable to parameter of type '{ x: 文字; y: 文字; }'.
!!! error TS2345:   Types of property 'y' are incompatible.
!!! error TS2345:     Type '数字' is not assignable to type '文字'.